# ocaml-clipper2

./: .gitmodules  README.md  clipper.opam  dune-project  index.html
.github/workflows/: deploy-doc.yml
c/: c.ml  clipper_c_function_descriptions.ml  clipper_c_type_descriptions.ml  dune
clipper/: index.html
clipper/C/: index.html
clipper/C/Clipper_c_function_descriptions/: index.html
clipper/C/Clipper_c_function_descriptions/Functions/: index.html
clipper/C/Clipper_c_type_descriptions/: index.html
clipper/C/Clipper_c_type_descriptions/Types/: index.html
clipper/C/Funcs/: index.html
clipper/C/Types/: index.html
clipper/C/Types/ClipType/: index.html
clipper/C/Types/Clipper64/: index.html
clipper/C/Types/ClipperD/: index.html
clipper/C/Types/EndType/: index.html
clipper/C/Types/FillRule/: index.html
clipper/C/Types/JoinType/: index.html
clipper/C/Types/Offset/: index.html
clipper/C/Types/Path64/: index.html
clipper/C/Types/PathD/: index.html
clipper/C/Types/Paths64/: index.html
clipper/C/Types/PathsD/: index.html
clipper/C/Types/Point64/: index.html
clipper/C/Types/PointD/: index.html
clipper/Clipper/: index.html
clipper/Clipper/Make64/: index.html
clipper/Clipper/Make64'/: index.html
clipper/Clipper/MakeD/: index.html
clipper/Clipper/MakeD'/: index.html
clipper/Clipper/module-type-Config/: index.html
clipper/Clipper/module-type-Poly/: index.html
clipper/Clipper/module-type-S/: index.html
clipper/Clipper/module-type-V/: index.html
clipper/Clipper/module-type-V64/: index.html
clipper/Clipper/module-type-VD/: index.html
clipper/Clipper_c/: index.html
clipper/Clipper_c/C/: index.html
clipper/Clipper_c/Clipper_c_function_descriptions/: index.html
clipper/Clipper_c/Clipper_c_type_descriptions/: index.html
clipper/Clipper_c/Clipper_c_types/: index.html
clipper/Clpr/: index.html
clipper/Clpr/Clipper64/: index.html
clipper/Clpr/ClipperD/: index.html
clipper/Clpr/Offset/: index.html
clipper/Clpr/Path64/: index.html
clipper/Clpr/PathD/: index.html
clipper/Clpr/Paths64/: index.html
clipper/Clpr/PathsD/: index.html
clipper/Clpr/Point64/: index.html
clipper/Clpr/PointD/: index.html
clipper/Clpr/PolyTree64/: index.html
clipper/Clpr/PolyTreeD/: index.html
clipper/Clpr/Rect64/: index.html
clipper/Clpr/RectD/: index.html
clipper/Clpr/SvgReader/: index.html
clipper/Clpr/SvgWriter/: index.html
clpr/: clpr.ml  clpr.mli  conv.ml  dune  endType.ml  offset.ml  path64.ml  pathD.ml  pathD_0.ml  paths64.ml  paths64_0.ml  pathsD.ml  pathsD_0.ml  point64.ml  pointD.ml  polyTree64.ml  polyTreeD.ml  rect64.ml  rect64_0.ml  rectD.ml  rectD_0.ml  svgReader.ml  svgWriter.ml
docs/: dune  index.mld
examples/: booleans.ml  c.ml  dune  minkowski.ml
examples/output/: minkowski.scad
lib/: clipType.ml  clipper.ml  clipper.mli  clipper64.ml  clipperD.ml  clipper_intf.ml  color.ml  dune  endType.ml  fillRule.ml  joinType.ml  path64.ml  pathD.ml  paths64.ml  pathsD.ml  point64.ml  pointD.ml  polyTree64.ml  polyTreeD.ml
test/: clipper_test.ml  dune
thin/: configTypes.ml  dune  joinType.ml  offset.ml  path64.ml  path64_0.ml  pathD.ml  paths64.ml  pathsD.ml  pointD.ml  polyTree64.ml  rect64.ml  rectD.ml  thin.ml  thin.mli
(+115 files in other folders)
